@@ -24,9 +24,6 @@
 --(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 --SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-
-__raw = {lower = string.lower, upper = string.upper, debug=windower.debug}
-
 -----------------------------------------------------------------------------------
 --Name: string.lower()
 --Args:
